--- a/Docs/Style/global.css
+++ b/Docs/Style/global.css
@@ -46,7 +46,8 @@
 }
 
 .fastFadeIn {
-    animation: fadeIn 0.3s;
+    animation: fadeIn 0.5s;
+    animation-direction: alternate;
 }
 
 @keyframes fastFadeIn {
