--- a/Docs/Style/global.css
+++ b/Docs/Style/global.css
@@ -67,12 +67,12 @@
 @keyframes superFastFadeIn {
     0% {
         z-index: 99999;
-        opacity: 0;
+        height: 0;
     }
     
     100% {
+        height: 100%;
         z-index: 99999;
-        opacity: 1;
     }
 }
 
